<resources>
    <string name="app_name">Từ điển</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Từ điển Anh - Việt</string>
    <string name="nav_header_subtitle">English - Vietnamese Dictionary</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cài đặt</string>

    <string name="menu_home">Trang chủ</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_word">Enter word</string>
    <string name="bookmark">Word saved</string>
    <string name="network">Network</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="other">Other</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="english_vietnamese">English - Vietnamese</string>
    <string name="vietnamese_english">Vietnamese - English</string>
</resources>