<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_bookmark"
            android:icon="@drawable/ic_bookmark_fill"
            android:title="@string/bookmark"/>
    </group>

    <item android:title="@string/network">
        <menu>
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_thumb_up"
                android:title="@string/rate"/>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
        </menu>
    </item>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help"
                android:title="@string/help"  />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info"
                android:title="@string/about" />
        </menu>
    </item>
</menu>